2002-02-04  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* [w3m-dev 02986]
	* file.c (print_internal_information): Don't print boundaries.
          Use henv->f instead of stdout.
	
2002-02-04  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02984] inline image improvements and cleanups
	* config.h.dist (HAVE_SYMLINK) added
	* config.h.dist (HAVE_LSTAT): added
	* configure: symlink() check
	* configure: lstat() check
	* fm.h (maxLoadImage): added
	* form.c (form_write_from_file): s/HAVE_READLINK/HAVE_LSTAT/
	* image.c: include <sys/stat.h>
	* image.c (MAX_LOAD_IMAGE): default 8
	* image.c (max_load_image): deleted
	* image.c (n_load_image): added
	* image.c (showImageProgress): added
	* image.c (loadImage): check load image count
			s/HAVE_READLINK/HAVE_LSTAT/ (HAVE_SYMLINK)
			showImageProgress
	* local.c: include <sys/stat.h>
		s/HAVE_READLINK/HAVE_LSTAT/
	* rc.c (CMT_MAX_LOAD_IMAGE): added
	* rc.c (max_load_image): added
	* doc/README.img: update
	* doc-jp/README.img: update
	
	* file.c (process_img): pre_int fix

2002-02-04  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02985] inputAnswer() and no "ssl_forbid_method"
	* file.c (inputAnswer): buf size is 80
	* url.c (openSSLHandle): if old_ssl_forbid_method == ssl_forbid_method
			ssl path is not modified

2002-02-04  Fumitoshi UKAI <ukai@debian.or.jp>

	* [w3m-dev 02980] Re: code_to_str not found ifndef JP_CHARSET
	* backend.c (get_mime_charset_name): used only ifdef JP_CHARSET

2002-02-04  Kazuhiko <kazuhiko@archi.kyoto-u.ac.jp>

	* [w3m-dev 02979] code_to_str not found ifndef JP_CHARSET
	* file.c (print_internal_information): ifdef JP_CHARSET

2002-02-03  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02967] parallel image downloading
	* fm.h (ImageCache): add touch, pid
	* image.c (getCharSize): retry fscanf
	* image.c (drawImage): retry fflush
	* image.c (MAX_LOAD_IMAGE): added, default 4
	* image.c (image_cache): change to ImageCache**
	* image.c (image_lock): added